packages/errors/test/__snapshots__/CANNOT_CREATE_PROJECT_TOKEN.ansi
[31mCan't create project's secret key.[39m